[gd_scene load_steps=3 format=3 uid="uid://bc3nyn3i2fv0f"]

[ext_resource type="Script" path="res://Menu.gd" id="1_u2kpi"]
[ext_resource type="Texture2D" uid="uid://fu5lqy2fwlke" path="res://Images/Title_Temp.png" id="2_p2as7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2kpi")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.667708, 0.669444)
texture = ExtResource("2_p2as7")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 516.0
offset_right = 762.0
offset_bottom = 718.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
